syntax = "proto3";

package tasks.api.backup;
option go_package = "tasks/pkg/api;api";

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

service Admin {
  rpc BackupCreate(google.protobuf.Empty) returns (BackupResponse) {
    option (google.api.http) = {
      post: "/v1/backup"
      body: "*"
    };
  }
  rpc AsyncBackupCreate(AsyncBackupCreateRequest) returns (AsyncBackupCreateResponse) {
    option (google.api.http) = {
      post: "/v1/backup/async"
      body: "*"
    };
  }
}

message BackupResponse {
  uint64  id            = 1;
  string  data          = 2;
  string  created_at    = 3;
}

message AsyncBackupCreateRequest {
  string request_id = 1;
}

message AsyncBackupCreateResponse {
  string request_id     = 1;
  string state          = 2;
  BackupResponse backup = 3;
}

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  host: "localhost:8079";
};